--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "./bin/gendiff.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "bin": {
     "gendiff": "bin/gendiff.js"
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@eslint/js": "^9.4.0",
     "eslint": "^9.4.0",
-    "globals": "^15.4.0"
+    "globals": "^15.4.0",
+    "jest": "^29.7.0"
   }
 }
