--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ insert_final_newline = true
 [Makefile]
 indent_style = tab
 
-[**/**.js]
+[**/**.js, **/**.yml]
 indent_style = space
 indent_size = 2
 
