--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.4.0",
-    "eslint": "^9.4.0",
+    "@jest/globals": "^29.7.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "globals": "^15.4.0",
     "jest": "^29.7.0"
   }
